src/test/deca/syntax/valid/test_objets/objet_newemptyclass.deca
//Description : new empty class
//
class A {}
{
    A a = new A() ;
}

