src/test/deca/syntax/invalid/print_vide.deca
//  Description :
//            Print sans parenthèse
//
// Résultat:
//mismatched input ';' expecting '('
//
{
    print;
}
